syntax = "proto3";

package controller.v1;

option go_package = "controller/gen/controllerpb;controllerpb";

service EnrollmentService {
  rpc EnrollConnector(EnrollRequest) returns (EnrollResponse);
  rpc EnrollTunneler(EnrollRequest) returns (EnrollResponse);
  rpc Renew(EnrollRequest) returns (EnrollResponse);
}

service ControlPlane {
  rpc Connect(stream ControlMessage)
      returns (stream ControlMessage);
}

message EnrollRequest {
  string id = 1;
  bytes public_key = 2;
}

message EnrollResponse {
  bytes certificate = 1;
  bytes ca_certificate = 2;
}

message ControlMessage {
  string type = 1;
  bytes payload = 2;
}

